2013-03-02  Peter Bloomfield

	Re-enable mailbox check in a subthread

	* libbalsa/mailbox.c (libbalsa_mailbox_progress_notify),
	(libbalsa_mailbox_msgno_inserted),
	(libbalsa_mailbox_msgno_removed),
	(libbalsa_mailbox_unlink_and_prepend), (lbm_set_msg_tree):
	insert subthread warnings.
	(lbm_check_idle): check mailbox in a subthread.
	* libbalsa/mailbox_local.c (lbml_load_messages_idle_cb),
	(libbalsa_mailbox_local_load_messages): load messages in the
	main thread, in an idle callback;
	(libbalsa_mailbox_local_finalize): remove any pending idle call.
	* libbalsa/mailbox_local.h: new member of LibBalsaMailboxLocal
	for the idle id.

2013-03-01  Peter Bloomfield

	* libbalsa/mailbox.h: idle id is guint, not gulong.

2013-03-01  Peter Bloomfield

	* libbalsa/mailbox.h: new LibBalsaMailbox members
	changed_idle_id and queue_check_idle_id.
	* libbalsa/mailbox.c (libbalsa_mailbox_finalize),
	(libbalsa_mailbox_check), (lbm_changed_idle_cb),
	(lbm_changed_schedule_idle), (libbalsa_mailbox_changed),
	(libbalsa_mailbox_msgno_filt_in),
	(libbalsa_mailbox_msgno_filt_out), (lbm_check_real),
	(lbm_queue_check): use them.

2013-02-28  Peter Bloomfield

	* src/balsa-index.c: refactor and simplify.

2013-02-28  Peter Bloomfield

	* src/main-window.c: survive torture test.

2013-02-28  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check),
	(lbm_msgno_filt_check_idle_cb),
	(libbalsa_mailbox_msgno_filt_check): check message against view
	filter synchronously when in the main thread.

2013-02-28  Pawel Salek

	* configure.ac: remove dependency on legacy gnome-icon-scheme pkg.
	* NEWS, configure.ac: release balsa-2.5.0

2013-02-28  Peter Bloomfield

	* libbalsa/mailbox.c: build with threads disabled.

2013-02-27  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_run_filters_on_reception_idle_cb),
	(libbalsa_mailbox_run_filters_on_reception): run filters in an
	idle callback.

2013-02-26  Peter Bloomfield

	* src/main-window.c: do not use another idle handler to set the